12/12/2004  version 0.3 pre1    Ian Lewis <IanLewis@member.fsf.org>

    * Updated the Source View to be a plugin